Set answer pop-up position to fixed so user will not need to scroll to the top to see it on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ main {
 /* Pop-up to show after user answers question */
 
 #answer-pop-up {
-    position: absolute;
+    position: fixed;
     top: 250px;
     width: 250px;
     max-width: 60%;
